--- a/src/config/taipy-config.toml
+++ b/src/config/taipy-config.toml
@@ -4,22 +4,6 @@ storage_type = "csv"
 default_path = "data/wine_harvest_france_aoc_09_19.csv"
 scope = "SCENARIO:SCOPE"
 
-[TASK.ADD_WINE_COLORS]
-inputs = []
-outputs = []
-function = "config.functions.add_wine_colors:function"
-skippable = "False:bool"
-
-[DATA_NODE.WINE_PRODUCTION_WITH_COLORS]
-storage_type = "pickle"
-scope = "SCENARIO:SCOPE"
-
-[PIPELINE.PIPELINE_WINE]
-tasks = ["ADD_WINE_STATS:SECTION", "ADD_GEOMETRY:SECTION"]
-
-[SCENARIO.SCENARIO_WINE]
-pipelines = ["PIPELINE_WINE:SECTION"]
-
 [TASK.ADD_WINE_STATS]
 inputs = ["WINE_PRODUCTION:SECTION"]
 outputs = ["WINE_PRODUCTION_WITH_STATS:SECTION"]
@@ -44,3 +28,7 @@ scope = "SCENARIO:SCOPE"
 storage_type = "json"
 default_path = "data/french_wine_bassin_centroids.geojson"
 scope = "SCENARIO:SCOPE"
+
+[SCENARIO.SC_WINE]
+additional_data_nodes = [ ]
+tasks = [ "ADD_WINE_STATS:SECTION", "ADD_GEOMETRY:SECTION" ]
